Committed some more changes

--- a/settings/internal/com.kms.katalon.execution.properties
+++ b/settings/internal/com.kms.katalon.execution.properties
@@ -1,4 +1,4 @@
-#Fri Dec 14 15:59:41 EAT 2018
+#Sat Dec 15 22:13:40 EAT 2018
 mailConfig.encryptionEnabled=false
 mailConfig.host="smtp.gmail.com"
 mailConfig.port="25"
@@ -9,4 +9,6 @@ mailConfig.attachment=false
 mailConfig.subject="Katalon Summary Report"
 mailConfig.cc=""
 mailConfig.reportRecipients="francismwatha@gmail.com;mwathambugua@gmail.com"
-mailConfig.reportFormat="[\\n  \\"CSV\\",\\n  \\"HTML\\"\\n]"
+mailConfig.reportFormat="[\\n  \\"HTML\\",\\n  \\"CSV\\"\\n]"
+mailConfig.bcc=""
+mailConfig.sendReportTestFailedOnly=false
